# rafi-agent

./: .gitignore  .pre-commit-config.yaml  README.md  agent.py  client.py  display.py  hooks.py  main.py  model.py  pyproject.toml  skill_types.py  skills.py  state.py  sub_agent_display.py  sub_agents.py  symlink.md  tools.py  web_search.py
tests/: test_agent.py  test_hooks.py  test_skills.py  test_state.py  test_sub_agent_display.py  test_sub_agents.py  test_tools.py
