[project]
name = "rafi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "prek>=0.3.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.pytest.ini_options]
pythonpath = ["."]
